tests/NormalTests/paczka1/fuzzy1/68271452.err
Error in line 2: B8RJPejs7 A319 -1,3
Error in line 5: frFar S362 59,1
Error in line 7: ea5LP3p A319 54,4
Error in line 1: B8RJPejs7 A319 34,8
Error in line 18: ea5LP3p S190 12,3
Error in line 22: B8RJPejs7 S190 11,64
Error in line 3: S190 A183 34,5
Error in line 15: B8RJPejs7 S362 12,3
Error in line 36: ea5LP3p A183 90,9
